workspace = { members = ["macros"] }

[package]
name = "supercar-band-com"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.83"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-login = "0.17.0"
askama = { git = "https://github.com/rinja-rs/askama.git", branch = "main" }
askama_escape = { git = "https://github.com/rinja-rs/askama.git", branch = "main" }
captcha = "0.0.9"
chrono = "0.4.39"
dashmap = "6.1.0"
futures = "0.3.31"
garde = { version = "0.21.0", features = ["derive", "email", "regex"] }
image = "0.25.5"
lettre = { version = "0.11", features = ["native-tls"] }
linkify = "0.10.0"
macros = { path = "./macros" }
memory-serve = "1.0.0-beta.3"
qrcode = "0.14.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
totp-rs = "5.6.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }